--- a/L4.md
+++ b/L4.md
@@ -126,15 +126,16 @@ plt.show()
 
 ```
 
+![output_5_0](https://user-images.githubusercontent.com/93451387/141871597-d56d6780-7473-4cff-afb7-9934ac0556e8.png)
 
     
-![png](output_5_0.png)
-    
-
-
+![output_5_1](https://user-images.githubusercontent.com/93451387/141871712-053fb5fd-a426-4d4b-9781-3638de3a823e.png)
 
     
-![png](output_5_1.png)
+
+
+
+   
     
 
 
